# module-oca-connector

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
setup/_metapackage/: pyproject.toml
